Initialize swagger for auth and tender
