# pkg/models/auth.go
@@ -1,17 +1,34 @@
 package models
 
-type Register struct {
+type RegisterReq struct {
+	Username string `json:"username"`
 	Email    string `json:"email"`
+	Role     string `json:"role"`
 	Password string `json:"password"`
-	Name     string `json:"name"`
-	Role     string `json:"role"` // "client", "admin"
 }
 
-type Login struct {
-    Email    string `json:"email"`
-    Password string `json:"password"`
+type LoginReq struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
 }
 
-type Token struct {
-    Token string `json:"token"`
+type UserRes struct {
+	Id        string `json:"id"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+	Role      string `json:"role"`
+	CreatedAt string `json:"created_at"`
+}
+
+type UpdateReq struct {
+	Id        string `json:"id"`
+	Username  string `json:"username"`
+	Email     string `json:"email"`
+}
+
+type TokenRes struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+	Id           string `json:"id"`
+	Role         string `json:"role"`
 }
